2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline some Image methods for speed.  Fix CachedImage's addClient method to just use isNull rather
        than needlessly creating a rect.

        Reviewed by Oliver Hunt

        * loader/CachedImage.cpp:
        (WebCore::CachedImage::addClient):
        * platform/graphics/Image.cpp:
        * platform/graphics/Image.h:
        (WebCore::Image::isNull):
        (WebCore::Image::rect):
        (WebCore::Image::width):
        (WebCore::Image::height):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Avoid using the non-inlined isVariable() when adding parsed values during CSS parsing.

        Reviewed by Oliver Hunt

        * css/CSSParserValues.cpp:
        (WebCore::CSSParserValueList::addValue):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline Document::inPageCache(), since - because of animation code - it is now called every time
        styles change on any element and so is now super-hot.

        Reviewed by Oliver Hunt

        * dom/Document.cpp:
        * dom/Document.h:
        (WebCore::Document::inPageCache):

2009-01-16  David Hyatt  <hyatt@apple.com>

        Take Font out of the GraphicsContext.  Fonts are moderately expensive to both compare and to assign to.
        The Font's presence in the GraphicsContext was making save/restore more expensive than it needed to be,
        and was also causing expensive comparison checks to be made before doing alterations of the Font in the
        GraphicsContext.

        A font must now be passed as a parameter to all text drawing functions.

        Reviewed by Oliver Hunt

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setFont):
        (WebCore::CanvasRenderingContext2D::drawTextInternal):
        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::drawText):
        (WebCore::GraphicsContext::drawBidiText):
        (WebCore::GraphicsContext::drawHighlightForText):